--- a/centeralign2.html
+++ b/centeralign2.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        body {margin: auto;}
+        .center {
+            background: black;
+            color: white;
+            border-radius: 1em;
+            padding: 1em;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            /*margin-right: -50%;*/
+            transform: translate(-50%, -50%)
+        }
+        div {margin: auto;width: 10%;}
+    </style>
 </head>
 <body>
-
+<div>Hi it's Taras</div>
+<div class="center">
+    <p><b>Note: </b>Using margin:auto will not work in IE8</p>
+</div>
 </body>
 </html>
